--- a/caddy/Dockerfile.template
+++ b/caddy/Dockerfile.template
@@ -2,7 +2,7 @@ ARG BALENA_MACHINE_NAME_ARG=%%BALENA_MACHINE_NAME%%
 
 FROM balenalib/$BALENA_MACHINE_NAME_ARG-alpine:run
 
-RUN apk add caddy 
+RUN curl https://getcaddy.com | bash
 
 COPY init.sh /init.sh
 RUN chmod +x /init.sh
