--- a/caddy/Dockerfile.template
+++ b/caddy/Dockerfile.template
@@ -4,8 +4,5 @@ FROM balenalib/$BALENA_MACHINE_NAME_ARG-alpine:run
 
 RUN apk add caddy 
 
-COPY init.sh /init.sh
-RUN chmod +x /init.sh
-
 EXPOSE 8080
-ENTRYPOINT ["/init.sh"]
+CMD ["caddy", "run"]
