--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,13 +1,10 @@
 :8080
 
-respond / "All good in the hood" 200 
+respond /ping "All good in the hood" 200 
 
-handle_path /router {
-  rewrite * /{path}
-  reverse_proxy {
-    to 192.168.1.1:80
-    header_up Host {http.reverse_proxy.upstream.host}
-    header_up X-Real-IP {remote}
-    header_up X-Forwarded-Proto {scheme}
-  }
+reverse_proxy {
+  to 192.168.1.1:80
+  header_up Host {http.reverse_proxy.upstream.host}
+  header_up X-Real-IP {remote}
+  header_up X-Forwarded-Proto {scheme}
 }
