--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,6 +1,8 @@
 :8080
 
 reverse_proxy {
-    to 192.168.1.1:80
+    to 192.168.1.1
     header_up Host {http.reverse_proxy.upstream.host}
+    # Refer is needed otherwise we get a auth error.
+    header_up Referer "http://192.168.1.1"
 }
