--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -5,3 +5,10 @@ reverse_proxy {
     # Refer is needed otherwise we get a auth error.
     header_up Referer "http://192.168.1.1"
 }
+
+handle_path /moma* {
+	rewrite * /{uri}
+	reverse_proxy { 
+    to http://moma:8080
+  }
+}
