--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,9 +1,9 @@
 :8080
 
 reverse_proxy {
-    to 192.168.1.1
+    to ${TARGET_IP} 
     # Refer is needed otherwise we get a auth error.
-    header_up Referer "http://192.168.1.1"
+    header_up Referer "http://${TARGET_IP}"
 }
 
 handle_path /moma* {
