--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,14 +1,7 @@
 :8080
 
 reverse_proxy {
-    to ${TARGET_IP} 
-    # Refer is needed otherwise we get a auth error.
-    header_up Referer "http://${TARGET_IP}"
-}
-
-handle_path /moma* {
-	rewrite * /{uri}
-	reverse_proxy { 
-    to http://moma:8080
-  }
+	to {$TARGET_IP}
+	# Refer is needed otherwise we get a auth error.
+	header_up Referer "http://{$TARGET_IP}"
 }
