--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,13 @@ services:
       dockerfile: Dockerfile.template
     restart: always
 
-  moma:
-    ports:
-      - "8080:8080"
-    build:
-      context: ./moma
-      dockerfile: Dockerfile.template
-    restart: always
+  # moma:
+  #   ports:
+  #     - "8080:8080"
+  #   build:
+  #     context: ./moma
+  #     dockerfile: Dockerfile.template
+  #   restart: always
 
 # volumes:
 #   tailscale-state: {}
