--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -2,5 +2,5 @@
 
 reverse_proxy {
   to {$TARGET_IP}
-  header_up Referer {http://{$REFERER_IP}:http.request.header.Referer}
+  header_up Referer "{http://{$REFERER_IP}:http.request.header.Referer}"
 }
